# src/integration-test/resources/OpenApiSpecificationIT/openapi.yaml
@@ -1,94 +1,74 @@
 openapi: 3.0.1
 info:
   title: api-eventlog
-  contact: {}
+  contact: { }
   license:
     name: MIT License
     url: https://opensource.org/licenses/MIT
   version: "2.0"
 servers:
-- url: http://localhost:8080
-  description: Generated server url
+  - url: http://localhost:58384
+    description: Generated server url
 tags:
-- name: Events
-  description: Event operations
+  - name: Events
+    description: Event operations
 paths:
   /{municipalityId}/{logKey}:
     get:
       tags:
-      - Events
+        - Events
       summary: Fetch log events
       description: "Fetch log events for a specific logKey, with or without filtering\
         \ the result"
       operationId: getEvents
       parameters:
-      - name: municipalityId
-        in: path
-        description: Municipality id
-        required: true
-        schema:
-          type: string
-        example: 2281
-      - name: logKey
-        in: path
-        description: Events stored under this UUID
-        required: true
-        schema:
-          type: string
-        example: f0882f1d-06bc-47fd-b017-1d8307f5ce95
-      - name: filter
-        in: query
-        description: "Syntax description: [spring-filter](https://github.com/turkraft/springfilter#syntax)"
-        required: false
-        schema:
-          type: string
-        example: metadata.key:'userId' and metadata.value:'john123'
-      - name: page
-        in: query
-        description: Zero-based page index (0..N)
-        required: false
-        schema:
-          minimum: 0
-          type: integer
-          default: 0
-      - name: size
-        in: query
-        description: The size of the page to be returned
-        required: false
-        schema:
-          minimum: 1
-          type: integer
-          default: 20
-      - name: sort
-        in: query
-        description: "Sorting criteria in the format: property,(asc|desc). Default\
-          \ sort order is ascending. Multiple sort criteria are supported."
-        required: false
-        schema:
-          type: array
-          items:
+        - name: municipalityId
+          in: path
+          description: Municipality id
+          required: true
+          schema:
             type: string
+          example: 2281
+        - name: logKey
+          in: path
+          description: Events stored under this UUID
+          required: true
+          schema:
+            type: string
+          example: f0882f1d-06bc-47fd-b017-1d8307f5ce95
+        - name: filter
+          in: query
+          description: "Syntax description: [spring-filter](https://github.com/turkraft/springfilter#syntax)"
+          required: false
+          schema:
+            type: string
+          example: metadata.key:'userId' and metadata.value:'john123'
+        - name: page
+          in: query
+          description: Zero-based page index (0..N)
+          required: false
+          schema:
+            minimum: 0
+            type: integer
+            default: 0
+        - name: size
+          in: query
+          description: The size of the page to be returned
+          required: false
+          schema:
+            minimum: 1
+            type: integer
+            default: 20
+        - name: sort
+          in: query
+          description: "Sorting criteria in the format: property,(asc|desc). Default\
+          \ sort order is ascending. Multiple sort criteria are supported."
+          required: false
+          schema:
+            type: array
+            items:
+              type: string
       responses:
-        "404":
-          description: Not Found
-          content:
-            application/problem+json:
-              schema:
-                $ref: "#/components/schemas/Problem"
-        "400":
-          description: Bad Request
-          content:
-            application/problem+json:
-              schema:
-                oneOf:
-                - $ref: "#/components/schemas/Problem"
-                - $ref: "#/components/schemas/ConstraintViolationProblem"
-        "500":
-          description: Internal Server error
-          content:
-            application/problem+json:
-              schema:
-                $ref: "#/components/schemas/Problem"
         "200":
           description: Successful Operation
           content:
@@ -98,28 +78,48 @@ paths:
             application/problem+json:
               schema:
                 $ref: "#/components/schemas/PageEvent"
+        "400":
+          description: Bad Request
+          content:
+            application/problem+json:
+              schema:
+                oneOf:
+                  - $ref: "#/components/schemas/Problem"
+                  - $ref: "#/components/schemas/ConstraintViolationProblem"
+        "404":
+          description: Not Found
+          content:
+            application/problem+json:
+              schema:
+                $ref: "#/components/schemas/Problem"
+        "500":
+          description: Internal Server error
+          content:
+            application/problem+json:
+              schema:
+                $ref: "#/components/schemas/Problem"
     post:
       tags:
-      - Events
+        - Events
       summary: Create log event
       description: Creates a log event under logKey
       operationId: createEvent
       parameters:
-      - name: municipalityId
-        in: path
-        description: Municipality id
-        required: true
-        schema:
-          type: string
-        example: 2281
-      - name: logKey
-        in: path
-        description: Event will be stored under this UUID. Used to separate data under
-          a unique id.
-        required: true
-        schema:
-          type: string
-        example: f0882f1d-06bc-47fd-b017-1d8307f5ce95
+        - name: municipalityId
+          in: path
+          description: Municipality id
+          required: true
+          schema:
+            type: string
+          example: 2281
+        - name: logKey
+          in: path
+          description: Event will be stored under this UUID. Used to separate data under
+            a unique id.
+          required: true
+          schema:
+            type: string
+          example: f0882f1d-06bc-47fd-b017-1d8307f5ce95
       requestBody:
         content:
           application/json:
@@ -127,12 +127,6 @@ paths:
               $ref: "#/components/schemas/Event"
         required: true
       responses:
-        "500":
-          description: Internal Server error
-          content:
-            application/problem+json:
-              schema:
-                $ref: "#/components/schemas/Problem"
         "202":
           description: Successful operation
         "400":
@@ -141,12 +135,18 @@ paths:
             application/problem+json:
               schema:
                 oneOf:
-                - $ref: "#/components/schemas/Problem"
-                - $ref: "#/components/schemas/ConstraintViolationProblem"
+                  - $ref: "#/components/schemas/Problem"
+                  - $ref: "#/components/schemas/ConstraintViolationProblem"
+        "500":
+          description: Internal Server error
+          content:
+            application/problem+json:
+              schema:
+                $ref: "#/components/schemas/Problem"
   /api-docs:
     get:
       tags:
-      - API
+        - API
       summary: OpenAPI
       operationId: getApiDocs
       responses:
@@ -161,92 +161,6 @@ paths:
       x-wso2-mutual-ssl: Optional
 components:
   schemas:
-    Event:
-      required:
-      - message
-      - owner
-      - type
-      type: object
-      properties:
-        type:
-          $ref: "#/components/schemas/EventType"
-        municipalityId:
-          type: string
-          description: Municipality ID
-          readOnly: true
-          example: "2281"
-        message:
-          type: string
-          description: Event description
-          example: Request saved in database
-        expires:
-          type: string
-          description: Date when event can be scheduled for delete. 'null' means never
-          format: date-time
-          nullable: true
-          example: 2030-10-31T01:30:00+02:00
-        owner:
-          type: string
-          description: Service that created event
-          example: SupportManagement
-        created:
-          type: string
-          description: Timestamp when the event was created
-          format: date-time
-          readOnly: true
-          example: 2000-10-31T01:30:00+02:00
-        historyReference:
-          type: string
-          description: Historical external reference to an immutable snapshot of data
-          nullable: true
-          example: fbe2fb67-005c-4f26-990f-1c95b5f6933e
-        sourceType:
-          type: string
-          description: Source which the event refers to
-          nullable: true
-          example: errand
-        metadata:
-          type: array
-          items:
-            $ref: "#/components/schemas/Metadata"
-      description: Event model
-    EventType:
-      type: string
-      description: |
-        ## CRUD events:
-        * `CREATE`
-        * `READ`
-        * `UPDATE`
-        * `DELETE`
-        ## System events:
-        * `ACCESS` - login, logout, authorization, throttling
-        * `EXECUTE` - send, queue, schedule, transfer, move
-        * `CANCEL` - terminate, abort, decommission, kill
-        * `DROP` - skip, omit, ignore, disregard
-      enum:
-      - CREATE
-      - READ
-      - UPDATE
-      - DELETE
-      - ACCESS
-      - EXECUTE
-      - CANCEL
-      - DROP
-    Metadata:
-      required:
-      - key
-      - value
-      type: object
-      properties:
-        key:
-          type: string
-          description: The key
-          example: userId
-        value:
-          type: string
-          description: The value
-          example: john123
-      description: Metadata model
     Problem:
       type: object
       properties:
@@ -260,12 +174,12 @@ components:
           type: object
           additionalProperties:
             type: object
-        status:
-          $ref: "#/components/schemas/StatusType"
         title:
           type: string
         detail:
           type: string
+        status:
+          $ref: "#/components/schemas/StatusType"
     StatusType:
       type: object
       properties:
@@ -395,12 +309,12 @@ components:
           type: object
           additionalProperties:
             type: object
-        status:
-          $ref: "#/components/schemas/StatusType"
         title:
           type: string
         detail:
           type: string
+        status:
+          $ref: "#/components/schemas/StatusType"
         suppressed:
           type: array
           items:
@@ -441,15 +355,105 @@ components:
           type: string
         message:
           type: string
+    Event:
+      required:
+        - message
+        - owner
+        - type
+      type: object
+      properties:
+        type:
+          $ref: "#/components/schemas/EventType"
+        municipalityId:
+          type: string
+          description: Municipality ID
+          readOnly: true
+          example: "2281"
+        message:
+          type: string
+          description: Event description
+          example: Request saved in database
+        expires:
+          type: string
+          description: Date when event can be scheduled for delete. 'null' means never
+          format: date-time
+          nullable: true
+          example: 2030-10-31T01:30:00+02:00
+        owner:
+          type: string
+          description: Service that created event
+          example: SupportManagement
+        created:
+          type: string
+          description: Timestamp when the event was created
+          format: date-time
+          readOnly: true
+          example: 2000-10-31T01:30:00+02:00
+        historyReference:
+          type: string
+          description: Historical external reference to an immutable snapshot of data
+          nullable: true
+          example: fbe2fb67-005c-4f26-990f-1c95b5f6933e
+        sourceType:
+          type: string
+          description: Source which the event refers to
+          nullable: true
+          example: errand
+        metadata:
+          type: array
+          items:
+            $ref: "#/components/schemas/Metadata"
+      description: Event model
+    EventType:
+      type: string
+      description: |
+        ## CRUD events:
+        * `CREATE`
+        * `READ`
+        * `UPDATE`
+        * `DELETE`
+        ## System events:
+        * `ACCESS` - login, logout, authorization, throttling
+        * `EXECUTE` - send, queue, schedule, transfer, move
+        * `CANCEL` - terminate, abort, decommission, kill
+        * `DROP` - skip, omit, ignore, disregard
+      enum:
+        - CREATE
+        - READ
+        - UPDATE
+        - DELETE
+        - ACCESS
+        - EXECUTE
+        - CANCEL
+        - DROP
+    Metadata:
+      required:
+        - key
+        - value
+      type: object
+      properties:
+        key:
+          type: string
+          description: The key
+          example: userId
+        value:
+          type: string
+          description: The value
+          example: john123
+      description: Metadata model
     PageEvent:
       type: object
       properties:
-        totalElements:
-          type: integer
-          format: int64
         totalPages:
           type: integer
           format: int32
+        totalElements:
+          type: integer
+          format: int64
+        first:
+          type: boolean
+        last:
+          type: boolean
         size:
           type: integer
           format: int32
@@ -461,18 +465,12 @@ components:
           type: integer
           format: int32
         sort:
-          type: array
-          items:
-            $ref: "#/components/schemas/SortObject"
+          $ref: "#/components/schemas/SortObject"
+        pageable:
+          $ref: "#/components/schemas/PageableObject"
         numberOfElements:
           type: integer
           format: int32
-        first:
-          type: boolean
-        last:
-          type: boolean
-        pageable:
-          $ref: "#/components/schemas/PageableObject"
         empty:
           type: boolean
     PageableObject:
@@ -482,9 +480,9 @@ components:
           type: integer
           format: int64
         sort:
-          type: array
-          items:
-            $ref: "#/components/schemas/SortObject"
+          $ref: "#/components/schemas/SortObject"
+        unpaged:
+          type: boolean
         paged:
           type: boolean
         pageNumber:
@@ -493,19 +491,13 @@ components:
         pageSize:
           type: integer
           format: int32
-        unpaged:
-          type: boolean
     SortObject:
       type: object
       properties:
-        direction:
-          type: string
-        nullHandling:
-          type: string
-        ascending:
+        empty:
           type: boolean
-        property:
-          type: string
-        ignoreCase:
+        unsorted:
           type: boolean
-  securitySchemes: {}
+        sorted:
+          type: boolean
+  securitySchemes: { }
